<resources>
    <string name="menuItem_toggleSpeed">Speed %1$d %%</string>
    <string name="menuItem_slotSave">Save slot</string>
    <string name="menuItem_slotLoad">Load slot</string>
    <string name="menuItem_setSlot">Slot %1$d</string>
    <string name="menuItem_selectSlot">Select Slot</string>
    <string name="menuItem_fileSave">Save to file…</string>
    <string name="menuItem_fileLoad">Load from file…</string>
    <string name="menuItem_fileLoadAutoSave">Load from auto save…</string>
    <string name="menuItem_screenshot">Screenshot</string>
    <string name="menuItem_setSpeed">Game speed</string>
    <string name="menuItem_enableFramelimiter">Sync audio</string>
    <string name="menuItem_disableFramelimiter">Desync audio</string>
    <string name="menuItem_player_one">Player 1</string>
    <string name="menuItem_player_two">Player 2</string>
    <string name="menuItem_player_three">Player 3</string>
    <string name="menuItem_player_four">Player 4</string>
    <string name="menuItem_paks">Controller Paks</string>
    <string name="menuItem_pak_empty">Empty</string>
    <string name="menuItem_pak_mem">Memory Pak</string>
    <string name="menuItem_pak_rumble">Rumble Pak</string>
    <string name="menuItem_pak_transfer">Transfer Pak</string>
    <string name="menuItem_paks_transfer">Transfer Paks</string>
    <string name="menuItem_paks_transfer_player1_rom">Player 1 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player1_ram">Player 1 Gameboy RAM</string>
    <string name="menuItem_paks_transfer_player2_rom">Player 2 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player2_ram">Player 2 Gameboy RAM</string>
    <string name="menuItem_paks_transfer_player3_rom">Player 3 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player3_ram">Player 3 Gameboy RAM</string>
    <string name="menuItem_paks_transfer_player4_rom">Player 4 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player4_ram">Player 4 Gameboy RAM</string>
    <string name="menuItem_setIme">Change IME</string>
    <string name="menuItem_exit">Exit</string>
    <string name="menuItem_deadzone">Deadzone</string>
    <string name="menuItem_auto">Auto</string>
    <string name="menuItem_sensitivity">Sensitivity</string>
    <string name="menuItem_sensitivity_x">X-axis Sensitivity</string>
    <string name="menuItem_sensitivity_y">Y-axis Sensitivity</string>
    <string name="menuItem_unmapAll">Unmap all</string>
    <string name="menuItem_search">Search</string>
    <string name="menuItem_play">Play</string>
    <string name="menuItem_refreshRoms">Refresh ROMs</string>
    <string name="menuItem_settings">Settings</string>
    <string name="menuItem_globalSettings">Global settings</string>
    <string name="menuItem_sensorConfiguration">Sensor configuration</string>
    <string name="menuItem_buttonsConfiguration">Buttons configuration</string>
    <string name="menuItem_profiles">Profiles</string>
    <string name="menuItem_emulationProfiles">Emulation</string>
    <string name="menuItem_touchscreenProfiles">Touchscreen</string>
    <string name="menuItem_controllerProfiles">Controller</string>
    <string name="menuItem_select_profiles">Select Profiles</string>
    <string name="menuItem_help">Help</string>
    <string name="menuItem_faq">FAQ</string>
    <string name="menuItem_helpForum">Help forum</string>
    <string name="menuItem_controllerDiagnostics">Controller diagnostics</string>
    <string name="menuItem_reportBug">Report bug</string>
    <string name="menuItem_about">About</string>
    <string name="menuItem_credits">Credits</string>
    <string name="menuItem_appVersion">App version</string>
    <string name="menuItem_logcat">Logcat</string>
    <string name="menuItem_hardwareInfo">Hardware info</string>
    <string name="menuItem_Tools">Tools</string>
    <string name="menuItem_Extract">Add Texture Pack</string>
    <string name="menuItem_Clear">Clear Texture Packs</string>
    <string name="menuItem_ClearShaderCache">Clear Shader Cache</string>
    <string name="menuItem_ConfirmationClearShaderCache">Are you sure you would like to clear the shader cache?</string>
    <string name="menuItem_localeOverride">Language</string>
    <string name="menuItem_new">New</string>
    <string name="menuItem_hideBuiltins">Hide built-ins</string>
    <string name="menuItem_showBuiltins">Show built-ins</string>
    <string name="popup_titleBuiltin">%1$s (built-in)</string>
    <string name="popup_titleCustom">%1$s</string>
    <string name="profile_name_cannot_be_empty">Name cannot be empty</string>
    <string name="profile_name_cannot_contain_brackets">Name cannot contain brackets</string>
    <string name="profile_name_must_be_unique">Name must be unique</string>
    <string name="profile_manage_profiles">Manage profiles</string>
    <string name="popup_faq">Mupen64Plus AE is developed and maintained by volunteers.<small>\n\nTo fix graphical glitches, try changing the <i>video plugin</i>.\n\nTo fix lag, try changing the <i>video frameskip</i> setting or the <i>video plugin</i>.\n\nFor unplayable ROMS, try unzipping the ROM first or trying a different version of the ROM.\n\nFor touchscreen control issues, try changing the <i>button scale</i> or <i>button layout</i>.\n\nFor other issues, or if you\'re still stuck, please click the <i>FAQ</i> button below.  For non-game-specific bugs, click the <i>Report bug</i> button below.  We respond to the vast majority of posts within 24 hours.  Honest.\n\n</small>Thank you for helping us improve the app!</string>
    <string name="popup_version">Version: %1$s\nVersion code: %2$d</string>
    <string name="listItem_edit">Edit</string>
    <string name="listItem_rename">Rename</string>
    <string name="listItem_copy">Copy</string>
    <string name="listItem_delete">Delete</string>
    <string name="listItem_disabled">(Disabled)</string>
    <string name="hint_profileName">Profile name</string>
    <string name="hint_profileComment">Description (optional)</string>
    <string name="toast_loadingSlot">Loading slot %1$d…</string>
    <string name="toast_savingSlot">Saving slot %1$d…</string>
    <string name="toast_movingSlot">Moving to slot %1$d…</string>
    <string name="toast_loadingFile">Loading %1$s…</string>
    <string name="toast_savingFile">Saving %1$s…</string>
    <string name="toast_overwritingFile">Overwriting %1$s…</string>
    <string name="toast_savingScreenshot">Saving screenshot…</string>
    <string name="toast_canceling">Canceling…</string>
    <string name="toast_pleaseWait">Please wait…</string>
    <string name="toast_paused">Paused…</string>
    <string name="toast_running">Running…</string>
    <string name="toast_shutting_down">Saving texture cache…</string>
    <string name="toast_not_done_shutting_down">Please wait, saving texture cache</string>
    <string name="toast_nativeMainFailure07">Failed to open ROM file for reading.</string>
    <string name="toast_sdInaccessible">App data missing, attempting to reload.</string>
    <string name="actionResume_title">Resume</string>
    <string name="actionResume_summary">Start from last automatic save</string>
    <string name="actionStart_title">Start</string>
    <string name="actionStart_summary">Reset the game</string>
    <string name="actionConnectNetplay_title">Connect netplay</string>
    <string name="actionConnectNetplay_summary">Connect to a netplay server with this game.</string>
    <string name="actionStartNetplay_title">Netplay server</string>
    <string name="actionStartNetplay_summary">Start netplay server with this game.</string>
    <string name="actionRemove_title">Remove</string>
    <string name="actionRemove_summary">Remove from library</string>
    <string name="actionCreateShortcut_title">Create shortcut</string>
    <string name="actionCreateShortcut_summary">Add a shortcut to this ROM in the default app launcher</string>
    <string name="actionWiki_title">Wiki</string>
    <string name="actionWiki_summary">Community help for this game</string>
    <string name="actionReloadAssets_title">Reload app resources</string>
    <string name="actionReloadAssets_summary">Does NOT affect user settings, ROMs, game saves, or other custom data</string>
    <string name="actionResetUserPrefs_title">Defaults</string>
    <string name="actionResetUserPrefs_summary">Restore default global settings</string>
    <string name="actionResetUserPrefs_popupMessage">Reset all global preferences to their defaults?</string>
    <string name="actionResetGamePrefs_title">Defaults</string>
    <string name="actionResetGamePrefs_summary">Restore default game settings</string>
    <string name="actionResetGamePrefs_popupMessage">Reset all game preferences to their defaults?<small>\n\nAny manual modifications you may have made to the config file will be overwritten.</small></string>
    <string name="actionCheatEditor_title">Manage cheat codes</string>
    <string name="actionCheatEditor_summary">Add, modify, and delete custom cheats</string>
    <string name="actionShare_title">Share</string>
    <string name="actionSetGameCoverArt_title">Change cover art</string>
    <string name="actionSetGameCoverArt_summary">Change covert art to a custom image</string>
    <string name="actionClearGameCoverArt_title">Clear cover art</string>
    <string name="actionClearGameCoverArt_summary">Clear previously set custom cover art</string>
    <string name="actionClearGameCoverArt_toast">Covert art has been cleared</string>
    <string name="actionDeleteGameData_title">Delete data</string>
    <string name="actionDeleteGameData_summary">Delete data for this game, from internal storage. Data in external storage will be left.</string>
    <string name="actionDeleteGameData_confirmation">Are you sure you would like to delete all data for this game from internal storage?</string>
    <string name="screenCheats_title">Cheats</string>
    <string name="screenCheats_summaryEnabled">Enabled</string>
    <string name="screenCheats_summaryDisabled">Disabled</string>
    <string name="screenAdvanced_title">Advanced</string>
    <string name="screenAdvanced_CountPerOpDefault_title">Use default count per operation</string>
    <string name="screenAdvanced_CountPerOpDefault_summary">Modifying this changes game timing, lower values can overclock the game but can cause instability.</string>
    <string name="screenAdvanced_CountPerOp_title">Count per operation</string>
    <string name="screenAdvanced_CountPerOpDenDefault_title">Use default overclocking factor</string>
    <string name="screenAdvanced_CountPerOpDenDefault_summary">Modifying this overclocks the R4300 processor by a factor of 2 each time the value is incremented, 0 is no overclock.</string>
    <string name="retroachievements_category_account">Account</string>
    <string name="retroachievements_category_settings">Settings</string>
    <string name="retroachievements_category_info">Information</string>
    <string name="retroachievements_enabled_title">Enable RetroAchievements</string>
    <string name="retroachievements_enabled_summary">Enable achievement tracking for supported N64 games</string>
    <string name="retroachievements_login_title">Login</string>
    <string name="retroachievements_login_summary">Sign in to your RetroAchievements account</string>
    <string name="retroachievements_logout_title">Logout</string>
    <string name="retroachievements_logout_summary">Sign out of your account</string>
    <string name="retroachievements_hardcore_title">Hardcore Mode</string>
    <string name="retroachievements_hardcore_summary">Disable save states, cheats, and rewind for full points</string>
    <string name="retroachievements_about_title">About RetroAchievements</string>
    <string name="retroachievements_about_summary">RetroAchievements adds achievements, leaderboards, and progression tracking to classic games. Visit retroachievements.org to create an account.</string>
</resources>